# l2cs_gaze_perception

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: gaze_params.yaml
launch/: gaze_pipeline.launch.py
rviz/: gaze_pipeline.rviz
src/gaze/: gaze_node.py  visualization.py
