<?xml version="1.0"?>
<package format="3">
  <name>l2cs_gaze_perception</name>
  <version>0.0.1</version>
  <description>Webcam-based gaze estimation using L2CS-Net for ROS2 Humble</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros_py</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
